# muzik

./: .gitignore  Cargo.toml  LICENCE  README.md  comping.mid  ruby_my_dear.mid
examples/: comping.rs
src/: comping_generator.rs  lib.rs  midi_chord.rs
src/parser/: lexer.rs  midi_chord.rs  mod.rs  parse.rs  tokens.rs
src/tokenize/: lexer.rs  mod.rs  tokens.rs
