[package]
name = "muzik"
version = "0.1.0"
edition = "2021"
description = "A parser library to generate Jazz/Pop/Rock chords from string inputs"
repository = "https://github.com/PauSala/muzik"
license = "MIT"
keywords = ["music", "music-theory", "chords", "midi", "jazz"]
categories = ["multimedia::audio", "parsing"]
exclude = [".DS_Store"]

[dependencies]
chordparser = "1.0.1"
midly = "0.5.3"

[[example]]
name = "comping"
path = "examples/comping.rs"
