[package]
name = "muzik"
version = "1.0.0"
edition = "2021"
description = "A library for generating chord progressions as MIDI files from string templates"
repository = "https://github.com/PauSala/muzik"
license = "MIT"
keywords = ["music", "music-theory", "chords", "midi", "jazz"]
categories = ["multimedia::audio", "parsing"]
exclude = [".DS_Store"]

[dependencies]
chordparser = "1.0.1"
midly = "0.5.3"

[[example]]
name = "comping"
path = "examples/comping.rs"
